# ar-vr-lab2

./: .gitignore  CMakeLists.txt  README.txt
lab2/: box.frag  box.vert  lab2.cpp
